Добавляет разметку catalog

--- a/index.html
+++ b/index.html
@@ -542,52 +542,74 @@
         <div class="footer-top">
             <div class="container">
 
-                <div class="footer-top_contact">
+                <div class="footer-top__inner">
 
-                    <a class="footer-top__logo" href="#">
-                        Техномарт
-                    </a>
-                    <p class="footer-top__address">
-                        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55
-                    </p>
+                    <div class="footer-top_contact">
 
-                </div>  <!-- /.footer-top_contact -->
+                        <a class="footer-top__logo header-top__logo" href="#">
+                            Техномарт
+                        </a>
+                        <p class="footer-top__address">
+                            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55
+                        </p>
 
-                <div class="footer-top__lists">
-<!--=================================================== Моя фантазия закончилась. Какие тут можно классы использовать? -->
-                    <ul class="#">
-                        <li class="#">
-                            Копмания
-                        </li>
-                        <li class="#">
-                            Новости
-                        </li>
-                        <li class="#">
-                            Каталог
-                        </li>
-                        <li class="#">
-                            Доставка
-                        </li>
-                        <li class="#">
-                            Контакты
-                        </li>
-                    </ul>
-                    <ul class="#">
-                        <li class="#">
-                            Материалы
-                        </li>
-                        <li class="#">
-                            Техника
-                        </li>
-                        <li class="#">
-                            Инструмент
-                        </li>
-                        <li class="#">
-                            Спецпредложения
-                        </li>
-                    </ul>
+                    </div>  <!-- /.footer-top_contact -->
 
-                </div>  <!-- /.footer-top__lists -->
+                    <div class="footer-top__lists">
+
+                        <ul class="top-list">
+                            <li class="top-list__item">
+                                <a class="top-list__link" href="#">
+                                    Копмания
+                                </a>
+                            </li>
+                            <li class="top-list__item">
+                                <a class="top-list__link" href="#">
+                                    Новости
+                                </a>
+                            </li>
+                            <li class="top-list__item">
+                                <a class="top-list__link" href="#">
+                                    Каталог
+                                </a>
+                            </li>
+                            <li class="top-list__item">
+                                <a class="top-list__link" href="#">
+                                    Доставка
+                                </a>
+                            </li>
+                            <li class="top-list__item">
+                                <a class="top-list__link" href="#">
+                                    Контакты
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="bottom-list">
+                            <li class="bottom-list__item">
+                                <a class="bottom-list__link" href="#">
+                                    Материалы
+                                </a>
+                            </li>
+                            <li class="bottom-list__item">
+                                <a class="bottom-list__link" href="#">
+                                    Техника
+                                </a>
+                            </li>
+                            <li class="bottom-list__item">
+                                <a class="bottom-list__link" href="#">
+                                    Инструмент
+                                </a>
+                            </li>
+                            <li class="bottom-list__item">
+                                <a class="bottom-list__link" href="#">
+                                    Спецпредложения
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div>  <!-- /.footer-top__lists -->
+
+                </div> <!-- /.footer-top__inner -->
 
             </div>  <!-- /.container -->
         </div>  <!-- /.footer-top -->
