--- a/catalog.html
+++ b/catalog.html
@@ -261,7 +261,7 @@
                     <ul class="goods-list">
 
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="#" alt="BOSCH BFG 9000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
                             <h2 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h2>
@@ -281,7 +281,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="#" alt="BOSCH BFG 3000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
                             <h2 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h2>
@@ -300,8 +300,9 @@
                                 </button>
                             </div>
                         </li>
-                        <li class="goods-list__item goods-list__item_new">
-                            <img class="goods-list__img" src="#" alt="BOSCH BFG 6000">
+                        <li class="goods-list__item">
+                            <div class="new-flag"></div>
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
                             <h2 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
                             </h2>
@@ -318,7 +319,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="#" alt="BOSCH BFG 2000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
                             <h2 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h2>
@@ -337,14 +338,14 @@
                                 </button>
                             </div>
                         </li>
-                        <li class="goods-list__item goods-list__item_new">
-                            <img class="goods-list__img" src="#" alt="BOSCH BFG 6000">
+                        <li class="goods-list__item">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
                             <h2 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h2>
-                            <div class="goods-list__price">
+                            <span class="goods-list__oldPrice">
                                 30500 р.
-                            </div>
+                            </span>
                             <div class="goods-list__price">
                                 25500 р.
                             </div>
@@ -358,7 +359,8 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="#" alt="BOSCH BFG 6000">
+                            <div class="new-flag"></div>
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
                             <h2 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
                             </h2>
@@ -374,8 +376,8 @@
                                 </button>
                             </div>
                         </li>
-                        <li class="goods-list__item goods-list__item_new">
-                            <img class="goods-list__img" src="#" alt="BOSCH BFG 9000">
+                        <li class="goods-list__item">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
                             <h2 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h2>
@@ -395,7 +397,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="#" alt="BOSCH BFG 3000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
                             <h2 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h2>
@@ -415,7 +417,8 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="#" alt="BOSCH BFG 6000">
+                            <div class="new-flag"></div>
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
                             <h2 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
                             </h2>
@@ -435,7 +438,7 @@
                     </ul>  <!-- /.popular-goods__list .goods-list -->
 
                     <ul class="list-tab">
-                    
+
                         <li class="list-tab__item list-tab__active">
                             <a class="list-tab__link" href="#">
                                 1
