--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 </div>  <!-- /.features__right -->
 
             </div>  <!-- /.container -->
-        </section>  <!-- /.popular-goods -->
+        </section>  <!-- /.features -->
 
         <section class="popular-goods">
             <div class="container">
@@ -291,7 +291,7 @@
                 <ul class="popular-goods__list goods-list">
 
                     <li class="goods-list__item">
-                        <img class="goods-list__img" src="#" alt="BOSCH BFG 9000">
+                        <img class="goods-list__img" src="img/popular-goods/Perforator_1.png" alt="BOSCH BFG 9000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 9000
                         </h2>
@@ -311,7 +311,7 @@
                         </div>
                     </li>
                     <li class="goods-list__item">
-                        <img class="goods-list__img" src="#" alt="BOSCH BFG 3000">
+                        <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 3000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 3000
                         </h2>
@@ -331,7 +331,7 @@
                         </div>
                     </li>
                     <li class="goods-list__item">
-                        <img class="goods-list__img" src="#" alt="BOSCH BFG 6000">
+                        <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 6000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 6000
                         </h2>
@@ -350,8 +350,9 @@
                             </button>
                         </div>
                     </li>
-                    <li class="goods-list__item goods-list__item_new">
-                        <img class="goods-list__img" src="#" alt="BOSCH BFG 2000">
+                    <li class="goods-list__item">
+                        <div class="new-flag"></div>
+                        <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 2000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 2000
                         </h2>
