--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
 
 <!-- ================================= Мы эту ссылку будем позиционировать абсолютно? =================================== -->
-                        <a class="slider__link" href="#">
+                        <a class="slider__link" href="catalog.html">
                             Открыть каталог
                         </a>
 
