--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                     <p class="header-content__text">
                         Интернет-магазин строительных материалов <br>и инструментов для ремонта
                     </p>
-                    <div class="header-content__contact">
+                    <adress class="header-content__contact">
                         <a class="header-content__tel" href="tel:88125550555">
                             +7 (812) 555-05-55
                         </a>
                         <p class="header-content__address">
                             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
                         </p>
-                    </div>
+                    </adress>
                     <ul class="header-content__list user-list">
                         <li class="user-list__item">
-                            <a class="user-list__link user-list__log">
+                            <a class="user-list__link user-list__log" href="#">
                                 Войти
                             </a>
                         </li>
