--- a/catalog.html
+++ b/catalog.html
@@ -106,14 +106,14 @@
                     <p class="header-content__text">
                         Интернет-магазин строительных материалов <br>и инструментов для ремонта
                     </p>
-                    <div class="header-content__contact">
+                    <adress class="header-content__contact">
                         <a class="header-content__tel" href="tel:88125550555">
                             +7 (812) 555-05-55
                         </a>
                         <p class="header-content__address">
                             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
                         </p>
-                    </div>
+                    </adress>
                     <div class="user-block">
                         <a class="user-block__name" href="#">
                             Равшан Джамшутович
