--- a/catalog.html
+++ b/catalog.html
@@ -98,10 +98,10 @@
             </div>  <!-- /.container -->
         </div>  <!-- /.header-top -->
 
-        <div class="header-content">
-            <div class="container">
+        <adress class="header-content">
+            <adress class="container">
 
-                <div class="header-content__inner">
+                <adress class="header-content__inner">
 
                     <p class="header-content__text">
                         Интернет-магазин строительных материалов <br>и инструментов для ремонта
@@ -128,10 +128,10 @@
                         </div>
                     </div>
 
-                </div>  <!-- /.header-content__inner -->
+                </adress>  <!-- /.header-content__inner -->
 
-            </div>  <!-- /.container -->
-        </div>  <!-- /.header-content -->
+            </adress>  <!-- /.container -->
+        </adress>  <!-- /.header-content -->
 
         <nav class="main-nav">
             <div class="container">
