--- a/catalog.html
+++ b/catalog.html
@@ -9,66 +9,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
-    <svg style="display: none;">
-
-        <symbol id="vk" viewBox="0 0 548.358 548.358">
-            <g>
-                <path d="M545.451,400.298c-0.664-1.431-1.283-2.618-1.858-3.569c-9.514-17.135-27.695-38.167-54.532-63.102l-0.567-0.571
-                l-0.284-0.28l-0.287-0.287h-0.288c-12.18-11.611-19.893-19.418-23.123-23.415c-5.91-7.614-7.234-15.321-4.004-23.13
-                c2.282-5.9,10.854-18.36,25.696-37.397c7.807-10.089,13.99-18.175,18.556-24.267c32.931-43.78,47.208-71.756,42.828-83.939
-                l-1.701-2.847c-1.143-1.714-4.093-3.282-8.846-4.712c-4.764-1.427-10.853-1.663-18.278-0.712l-82.224,0.568
-                c-1.332-0.472-3.234-0.428-5.712,0.144c-2.475,0.572-3.713,0.859-3.713,0.859l-1.431,0.715l-1.136,0.859
-                c-0.952,0.568-1.999,1.567-3.142,2.995c-1.137,1.423-2.088,3.093-2.848,4.996c-8.952,23.031-19.13,44.444-30.553,64.238
-                c-7.043,11.803-13.511,22.032-19.418,30.693c-5.899,8.658-10.848,15.037-14.842,19.126c-4,4.093-7.61,7.372-10.852,9.849
-                c-3.237,2.478-5.708,3.525-7.419,3.142c-1.715-0.383-3.33-0.763-4.859-1.143c-2.663-1.714-4.805-4.045-6.42-6.995
-                c-1.622-2.95-2.714-6.663-3.285-11.136c-0.568-4.476-0.904-8.326-1-11.563c-0.089-3.233-0.048-7.806,0.145-13.706
-                c0.198-5.903,0.287-9.897,0.287-11.991c0-7.234,0.141-15.085,0.424-23.555c0.288-8.47,0.521-15.181,0.716-20.125
-                c0.194-4.949,0.284-10.185,0.284-15.705s-0.336-9.849-1-12.991c-0.656-3.138-1.663-6.184-2.99-9.137
-                c-1.335-2.95-3.289-5.232-5.853-6.852c-2.569-1.618-5.763-2.902-9.564-3.856c-10.089-2.283-22.936-3.518-38.547-3.71
-                c-35.401-0.38-58.148,1.906-68.236,6.855c-3.997,2.091-7.614,4.948-10.848,8.562c-3.427,4.189-3.905,6.475-1.431,6.851
-                c11.422,1.711,19.508,5.804,24.267,12.275l1.715,3.429c1.334,2.474,2.666,6.854,3.999,13.134c1.331,6.28,2.19,13.227,2.568,20.837
-                c0.95,13.897,0.95,25.793,0,35.689c-0.953,9.9-1.853,17.607-2.712,23.127c-0.859,5.52-2.143,9.993-3.855,13.418
-                c-1.715,3.426-2.856,5.52-3.428,6.28c-0.571,0.76-1.047,1.239-1.425,1.427c-2.474,0.948-5.047,1.431-7.71,1.431
-                c-2.667,0-5.901-1.334-9.707-4c-3.805-2.666-7.754-6.328-11.847-10.992c-4.093-4.665-8.709-11.184-13.85-19.558
-                c-5.137-8.374-10.467-18.271-15.987-29.691l-4.567-8.282c-2.855-5.328-6.755-13.086-11.704-23.267
-                c-4.952-10.185-9.329-20.037-13.134-29.554c-1.521-3.997-3.806-7.04-6.851-9.134l-1.429-0.859c-0.95-0.76-2.475-1.567-4.567-2.427
-                c-2.095-0.859-4.281-1.475-6.567-1.854l-78.229,0.568c-7.994,0-13.418,1.811-16.274,5.428l-1.143,1.711
-                C0.288,140.146,0,141.668,0,143.763c0,2.094,0.571,4.664,1.714,7.707c11.42,26.84,23.839,52.725,37.257,77.659
-                c13.418,24.934,25.078,45.019,34.973,60.237c9.897,15.229,19.985,29.602,30.264,43.112c10.279,13.515,17.083,22.176,20.412,25.981
-                c3.333,3.812,5.951,6.662,7.854,8.565l7.139,6.851c4.568,4.569,11.276,10.041,20.127,16.416
-                c8.853,6.379,18.654,12.659,29.408,18.85c10.756,6.181,23.269,11.225,37.546,15.126c14.275,3.905,28.169,5.472,41.684,4.716h32.834
-                c6.659-0.575,11.704-2.669,15.133-6.283l1.136-1.431c0.764-1.136,1.479-2.901,2.139-5.276c0.668-2.379,1-5,1-7.851
-                c-0.195-8.183,0.428-15.558,1.852-22.124c1.423-6.564,3.045-11.513,4.859-14.846c1.813-3.33,3.859-6.14,6.136-8.418
-                c2.282-2.283,3.908-3.666,4.862-4.142c0.948-0.479,1.705-0.804,2.276-0.999c4.568-1.522,9.944-0.048,16.136,4.429
-                c6.187,4.473,11.99,9.996,17.418,16.56c5.425,6.57,11.943,13.941,19.555,22.124c7.617,8.186,14.277,14.271,19.985,18.274
-                l5.708,3.426c3.812,2.286,8.761,4.38,14.853,6.283c6.081,1.902,11.409,2.378,15.984,1.427l73.087-1.14
-                c7.229,0,12.854-1.197,16.844-3.572c3.998-2.379,6.373-5,7.139-7.851c0.764-2.854,0.805-6.092,0.145-9.712
-                C546.782,404.25,546.115,401.725,545.451,400.298z"/>
-            </g>
-        </symbol>
-
-        <symbol id="facebook" viewBox="0 0 430.113 430.114">
-            <g>
-                <path d="M158.081,83.3c0,10.839,0,59.218,0,59.218h-43.385v72.412h43.385v215.183h89.122V214.936h59.805
-                c0,0,5.601-34.721,8.316-72.685c-7.784,0-67.784,0-67.784,0s0-42.127,0-49.511c0-7.4,9.717-17.354,19.321-17.354
-                c9.586,0,29.818,0,48.557,0c0-9.859,0-43.924,0-75.385c-25.016,0-53.476,0-66.021,0C155.878-0.004,158.081,72.48,158.081,83.3z" />
-            </g>
-        </symbol>
-
-        <symbol id="in" viewBox="0 0 97.395 97.395">
-            <g>
-                <path d="M12.501,0h72.393c6.875,0,12.5,5.09,12.5,12.5v72.395c0,7.41-5.625,12.5-12.5,12.5H12.501C5.624,97.395,0,92.305,0,84.895
-                V12.5C0,5.09,5.624,0,12.501,0L12.501,0z M70.948,10.821c-2.412,0-4.383,1.972-4.383,4.385v10.495c0,2.412,1.971,4.385,4.383,4.385
-                h11.008c2.412,0,4.385-1.973,4.385-4.385V15.206c0-2.413-1.973-4.385-4.385-4.385H70.948L70.948,10.821z M86.387,41.188h-8.572
-                c0.811,2.648,1.25,5.453,1.25,8.355c0,16.2-13.556,29.332-30.275,29.332c-16.718,0-30.272-13.132-30.272-29.332
-                c0-2.904,0.438-5.708,1.25-8.355h-8.945v41.141c0,2.129,1.742,3.872,3.872,3.872h67.822c2.13,0,3.872-1.742,3.872-3.872V41.188
-                H86.387z M48.789,29.533c-10.802,0-19.56,8.485-19.56,18.953c0,10.468,8.758,18.953,19.56,18.953
-                c10.803,0,19.562-8.485,19.562-18.953C68.351,38.018,59.593,29.533,48.789,29.533z"/>
-            </g>
-        </symbol>
-
-    </svg>
 
     <header class="header">
         
@@ -98,10 +38,10 @@
             </div>  <!-- /.container -->
         </div>  <!-- /.header-top -->
 
-        <adress class="header-content">
-            <adress class="container">
+        <div class="header-content">
+            <div class="container">
 
-                <adress class="header-content__inner">
+                <div class="header-content__inner">
 
                     <p class="header-content__text">
                         Интернет-магазин строительных материалов <br>и инструментов для ремонта
@@ -116,7 +56,16 @@
                     </adress>
                     <div class="user-block">
                         <a class="user-block__name" href="#">
+                            <svg class="user-block__icon-user" enable-background="new 0 0 20 18" height="18" viewBox="0 0 20 18" width="20" xmlns="http://www.w3.org/2000/svg"><path d="m17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278 0-2.807-1.8-5.083-4.021-5.083s-4.021 2.276-4.021 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39s-2.118 3.834-2.118 3.834h20s.025-3.099-2.119-3.834z"/></svg>
                             Равшан Джамшутович
+                            <svg class="user-block__icon-logout" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	                            width="21px" height="17px" viewBox="0 0 21 17" enable-background="new 0 0 21 17" xml:space="preserve">
+                                <g>
+                                    <polygon points="21,8.5 12.125,0 12.125,6 6.125,6 6.125,11 12.125,11 12.125,17 	"/>
+                                    <path d="M3.106,13.952V3.048c0.018-0.376,0.171-1.057,1.01-1.057h5.027V0H4.116C1.938,0,1.112,1.81,1.087,3.027
+                                        v10.946C1.112,15.189,1.938,17,4.116,17h5.027v-1.99H4.116C3.277,15.01,3.124,14.327,3.106,13.952z"/>
+                                </g>
+                            </svg>
                         </a>
                         <div class="user-block__links">
                             <a class="user-block__link" href="#">
@@ -128,10 +77,10 @@
                         </div>
                     </div>
 
-                </adress>  <!-- /.header-content__inner -->
+                </div>  <!-- /.header-content__inner -->
 
-            </adress>  <!-- /.container -->
-        </adress>  <!-- /.header-content -->
+            </div>  <!-- /.container -->
+        </div>  <!-- /.header-content -->
 
         <nav class="main-nav">
             <div class="container">
@@ -189,7 +138,7 @@
                 <ul class="catalog-header__list">
                     <li class="catalog-header__item">
                         <a class="catalog-header__link" href="#">
-                            Дом
+                            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12"><g><path d="M3 8v4h4V8h2v4h4V8L8 3.516z"/><path d="M14.831 6.365L13 4.751V0h-2v2.987L8.332.635c-.02-.017-.043-.023-.064-.037a.465.465 0 0 0-.08-.047.551.551 0 0 0-.095-.024C8.062.521 8.032.515 8 .515c-.031 0-.061.006-.092.012a.46.46 0 0 0-.095.025c-.028.011-.053.029-.08.046-.021.014-.045.02-.064.037l-6.498 5.73a.501.501 0 0 0 .33.875.497.497 0 0 0 .331-.125L8 1.677l6.169 5.438a.501.501 0 0 0 .662-.75z"/></g></svg>
                         </a>
                     </li>
                     <li class="catalog-header__item">
@@ -199,7 +148,7 @@
                     </li>
                     <li class="catalog-header__item">
                         <a class="catalog-header__link" href="#">
-                            Инструменты
+                            Инструмент
                         </a>
                     </li>
                     <li class="catalog-header__item">
@@ -224,7 +173,7 @@
                     <div class="catalog-sort__inner">
 
                         <h3 class="catalog-sort__title">
-                            Сортировка
+                            Сортировка:
                         </h3>
                         <ul class="catalog-sort__list list-type">
                             <li class="list-type__item">
@@ -243,15 +192,18 @@
                                 </a>
                             </li>      
                         </ul>
-                        <ul class="list-arкow">
-                            <li class="list-arкow__item">
-                                <a class="list-arкow__link" href="#">
-                                    Стрелка вниз
+                        <ul class="list-arrow">
+                            <li class="list-arrow__item">
+                                <a class="list-arrow__link" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg>
                                 </a>
                             </li>
-                            <li class="list-arкow__item">
-                                <a class="list-arкow__link" href="#">
-                                    Стрелка верх
+                            <li class="list-arrow__item">
+                                <a class="list-arrow__link" href="#">
+                                    <svg class="list-arrow__link-down" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	                                    width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
+                                        <polyline points="5.5,10 0,0 11,0 "/>
+                                    </svg>
                                 </a>
                             </li>
                         </ul>
@@ -565,23 +517,17 @@
                 <div class="footer-bottom__inner">
 
                     <p class="footer-bottom__copyright">
-                        &copy; 2010–2019 Компания «Техномарт» Все права защищены
+                        &copy; 2010–2019 Компания &laquo;Техномарт&laquo; Все права защищены
                     </p>
                     <div class="footer-bottom__social social">
                         <a class="social__item" href="#" target="_blank">
-                            <svg class="social__icon social__icon_vk">
-                                <use xlink:href="#vk"></use>
-                            </svg>
+                            <img class="social__icon social__icon_vk" src="img/footer/vk.svg" alt="vk">
                         </a>
                         <a class="social__item" href="#" target="_blank">
-                            <svg class="social__icon social__icon_facebook">
-                                <use xlink:href="#facebook"></use>
-                            </svg>
+                            <img class="social__icon social__icon_facebook" src="img/footer/facebook.svg" alt="facebook">
                         </a>
                         <a class="social__item" href="#" target="_blank">
-                            <svg class="social__icon social__icon_in">
-                                <use xlink:href="#in"></use>
-                            </svg>
+                            <img class="social__icon social__icon_in" src="img/footer/instagram.svg" alt="instagram">
                         </a>
                     </div>
                     <ul class="footer-bottom__list list-info">
