--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
                     <ul class="header-content__list user-list">
                         <li class="user-list__item">
                             <a class="user-list__link user-list__log" href="#">
+                                <svg class="user-list__icon-login" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	                                width="20px" height="17px" viewBox="0 0 20 17" enable-background="new 0 0 20 17" xml:space="preserve">
+                                    <g>
+                                        <polygon points="14.875,8.5 6,0 6,6 0,6 0,11 6,11 6,17 	"/>
+                                    </g>
+                                    <path d="M16.986,15.01h-5.027V17h5.027c2.178,0,3.004-1.81,3.029-3.026V3.028C19.99,1.811,19.164,0,16.986,0h-5.027
+                                        v1.99h5.027c0.839,0,0.992,0.681,1.01,1.057v10.904C17.979,14.327,17.825,15.01,16.986,15.01z"/>
+                                </svg>
                                 Войти
                             </a>
                         </li>
@@ -92,7 +100,7 @@
                         </a>
                     </li>
                     <li class="main-nav__item">
-                        <a class="main-nav__link" href="#">
+                        <a class="main-nav__link" href="catalog.html">
                             Каталог
                         </a>
                     </li>
@@ -232,7 +240,7 @@
                 <ul class="popular-goods__list goods-list">
 
                     <li class="goods-list__item">
-                        <img class="goods-list__img" src="img/popular-goods/Perforator_1.png" alt="BOSCH BFG 9000" width="218" height="170">
+                        <img class="goods-list__img" src="img/popular-goods/Perforator_1.png" alt="Перфоратор BOSCH BFG 9000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 9000
                         </h2>
@@ -252,7 +260,7 @@
                         </div>
                     </li>
                     <li class="goods-list__item">
-                        <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 3000" width="218" height="170">
+                        <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 3000
                         </h2>
@@ -272,7 +280,7 @@
                         </div>
                     </li>
                     <li class="goods-list__item">
-                        <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 6000" width="218" height="170">
+                        <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 6000
                         </h2>
@@ -293,7 +301,7 @@
                     </li>
                     <li class="goods-list__item">
                         <div class="new-flag"></div>
-                        <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 2000" width="218" height="170">
+                        <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 2000
                         </h2>
@@ -379,48 +387,46 @@
     
         <section class="advantage"> 
             <div class="container">
-
-                <div class="service">
-
-                    <h2 class="service-title">
-                        Сервисы
-                    </h2>
-                    <p class="service-text">
-                        Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
-                    </p>
-
-                </div>
-
-                <div class="delivery">
-
-                    <ul class="delivery-list">
-                        <li class="delivery-list__item">
-                            <a class="delivery-list__link" href="#">
-                                Доставка
-                            </a>
-                        </li>
-                        <li class="delivery-list__item">
-                            <a class="delivery-list__link" href="#">
-                                Гарантия
-                            </a>
-                        </li>
-                        <li class="delivery-list__item">
-                            <a class="delivery-list__link" href="#">
-                                Кредит
-                            </a>
-                        </li>
-                    </ul>
-                    <div  class="delivery-contant">
-                        <h2 class="delivery-contant__title">
-                            Доставка
+                <div class="advantage__inner">
+                
+                    <div class="service">
+                        <h2 class="service-title">
+                            Сервисы
                         </h2>
-                        <p class="delivery-contant__text">
-                            Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!
+                        <p class="service-text">
+                            Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
                         </p>
                     </div>
 
-                </div>  <!-- /.delivery --> 
+                    <div class="delivery">
+                        <ul class="delivery-list">
+                            <li class="delivery-list__item">
+                                <a class="delivery-list__link delivery-list__link_active" href="#">
+                                    Доставка
+                                </a>
+                            </li>
+                            <li class="delivery-list__item">
+                                <a class="delivery-list__link" href="#">
+                                    Гарантия
+                                </a>
+                            </li>
+                            <li class="delivery-list__item">
+                                <a class="delivery-list__link" href="#">
+                                    Кредит
+                                </a>
+                            </li>
+                        </ul>
+                        <div  class="delivery-contant">
+                            <h2 class="delivery-contant__title">
+                                Доставка
+                            </h2>
+                            <p class="delivery-contant__text">
+                                Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!
+                            </p>
+                        </div>
+                    </div>  <!-- /.delivery --> 
 
+                </div> <!-- /.advantage__inner --> 
             </div>  <!-- /.container --> 
         </section>  <!-- /.advantage --> 
 
@@ -564,7 +570,7 @@
                 <div class="footer-bottom__inner">
 
                     <p class="footer-bottom__copyright">
-                        &copy; 2010–2019 Компания «Техномарт» Все права защищены
+                        &copy; 2010–2019 Компания &laquo;Техномарт&raquo; Все права защищены
                     </p>
                     <div class="footer-bottom__social social">
                         <a class="social__item" href="#" target="_blank">
