Правки разметки страницы catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -256,7 +256,7 @@
                         </h2>
                         <ul class="catalog-sort__list list-type">
                             <li class="list-type__item">
-                                <a class="list-type__link" href="#">
+                                <a class="list-type__link list-type__link_active" href="#">
                                     По цене
                                 </a>
                             </li>
@@ -273,7 +273,7 @@
                         </ul>
                         <ul class="list-arrow">
                             <li class="list-arrow__item">
-                                <a class="list-arrow__link" href="#">
+                                <a class="list-arrow__link list-arrow__link_active" href="#">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg>
                                 </a>
                             </li>
@@ -468,11 +468,11 @@
 
                     </ul>  <!-- /.popular-goods__list .goods-list -->
 
-                    <div>
+                    <div class="list-tab__wraper">
                         <ul class="list-tab">
 
-                            <li class="list-tab__item list-tab__active">
-                                <a class="list-tab__link" href="#">
+                            <li class="list-tab__item">
+                                <a class="list-tab__link list-tab__link_active" href="#">
                                     1
                                 </a>
                             </li>
@@ -488,7 +488,7 @@
                             </li>
 
                         </ul>
-                        <a class="list-tab__link" href="#">
+                        <a class="list-tab__link list-tab__link_next" href="#">
                             Следующая
                         </a>
                     </div>
