Исправление по стайл гайду

--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 9000
                         </h2>
-                        <span class="goods-list__oldPrice">
+                        <del class="goods-list__oldprice">
                             32500 р.
-                        </span>
+                        </del>
                         <div class="goods-list__price">
                             25500 р.
                         </div>
@@ -271,9 +271,9 @@
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 3000
                         </h2>
-                        <span class="goods-list__oldPrice">
+                        <del class="goods-list__oldprice">
                             22500 р.
-                        </span>
+                        </del>
                         <div class="goods-list__price">
                             15500 р.
                         </div>
@@ -291,9 +291,9 @@
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 6000
                         </h2>
-                        <span class="goods-list__oldPrice">
+                        <del class="goods-list__oldprice">
                             30500 р.
-                        </span>
+                        </del>
                         <div class="goods-list__price">
                             25500 р.
                         </div>
