--- a/catalog.html
+++ b/catalog.html
@@ -296,9 +296,9 @@
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h3>
-                            <span class="goods-list__oldPrice">
+                            <del class="goods-list__oldprice">
                                 22500 р.
-                            </span>
+                            </del>
                             <div class="goods-list__price">
                                 15500 р.
                             </div>
@@ -316,9 +316,67 @@
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h3>
-                            <span class="goods-list__oldPrice">
+                            <del class="goods-list__oldprice">
                                 30500 р.
-                            </span>
+                            </del>
+                            <div class="goods-list__price">
+                                25500 р.
+                            </div>
+                            <div class="goods-list__active">
+                                <button class="goods-list__buy" type="button">
+                                    Купить
+                                </button>
+                                <button class="goods-list__bookmark" type="button">
+                                    В закладки
+                                </button>
+                            </div>
+                        </li>
+                        <li class="goods-list__item goods-list__item_new">
+                            <div class="new-flag"></div>
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
+                            <h3 class="goods-list__title">
+                                Перфоратор BOSCH BFG 2000
+                            </h3>
+                            <div class="goods-list__price">
+                                12500 р.
+                            </div>
+                            <div class="goods-list__active">
+                                <button class="goods-list__buy" type="button">
+                                    Купить
+                                </button>
+                                <button class="goods-list__bookmark" type="button">
+                                    В закладки
+                                </button>
+                            </div>
+                        </li>
+                        <li class="goods-list__item">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
+                            <h3 class="goods-list__title">
+                                Перфоратор BOSCH BFG 3000
+                            </h3>
+                            <del class="goods-list__oldprice">
+                                22500 р.
+                            </del>
+                            <div class="goods-list__price">
+                                15500 р.
+                            </div>
+                            <div class="goods-list__active">
+                                <button class="goods-list__buy" type="button">
+                                    Купить
+                                </button>
+                                <button class="goods-list__bookmark" type="button">
+                                    В закладки
+                                </button>
+                            </div>
+                        </li>
+                        <li class="goods-list__item goods-list__item_new">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
+                            <h3 class="goods-list__title">
+                                Перфоратор BOSCH BFG 6000
+                            </h3>
+                            <del class="goods-list__oldprice">
+                                30500 р.
+                            </del>
                             <div class="goods-list__price">
                                 25500 р.
                             </div>
@@ -349,14 +407,14 @@
                                 </button>
                             </div>
                         </li>
-                        <li class="goods-list__item">
+                        <li class="goods-list__item goods-list__item_new">
                             <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h3>
-                            <span class="goods-list__oldPrice">
+                            <dell class="goods-list__oldprice">
                                 22500 р.
-                            </span>
+                            </dell>
                             <div class="goods-list__price">
                                 15500 р.
                             </div>
@@ -374,67 +432,9 @@
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h3>
-                            <span class="goods-list__oldPrice">
+                            <dell class="goods-list__oldprice">
                                 30500 р.
-                            </span>
-                            <div class="goods-list__price">
-                                25500 р.
-                            </div>
-                            <div class="goods-list__active">
-                                <button class="goods-list__buy" type="button">
-                                    Купить
-                                </button>
-                                <button class="goods-list__bookmark" type="button">
-                                    В закладки
-                                </button>
-                            </div>
-                        </li>
-                        <li class="goods-list__item">
-                            <div class="new-flag"></div>
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
-                            <h3 class="goods-list__title">
-                                Перфоратор BOSCH BFG 2000
-                            </h3>
-                            <div class="goods-list__price">
-                                12500 р.
-                            </div>
-                            <div class="goods-list__active">
-                                <button class="goods-list__buy" type="button">
-                                    Купить
-                                </button>
-                                <button class="goods-list__bookmark" type="button">
-                                    В закладки
-                                </button>
-                            </div>
-                        </li>
-                        <li class="goods-list__item">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
-                            <h3 class="goods-list__title">
-                                Перфоратор BOSCH BFG 3000
-                            </h3>
-                            <span class="goods-list__oldPrice">
-                                22500 р.
-                            </span>
-                            <div class="goods-list__price">
-                                15500 р.
-                            </div>
-                            <div class="goods-list__active">
-                                <button class="goods-list__buy" type="button">
-                                    Купить
-                                </button>
-                                <button class="goods-list__bookmark" type="button">
-                                    В закладки
-                                </button>
-                            </div>
-                        </li>
-                        <li class="goods-list__item">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
-                            <h3 class="goods-list__title">
-                                Перфоратор BOSCH BFG 6000
-                            </h3>
-                            <span class="goods-list__oldPrice">
-                                30500 р.
-                            </span>
+                            </dell>
                             <div class="goods-list__price">
                                 25500 р.
                             </div>
