Добавил попапы на index.html

--- a/index.html
+++ b/index.html
@@ -491,9 +491,49 @@
             </div>  <!-- /.container -->
         </section>  <!-- /.information -->
 
-        <section class="write-us">
+        <div class="container">
+            <section class="write-us">
+                <h2 class="visually-hidden">
+                    Напиши нам
+                </h2>
+
+                <div class="write-us__inner">
+                    <div class="write-us__items">
+                        <div class="write-us__item">
+                            <h3 class="write-us__title">
+                                Ваше имя:
+                            </h3>
+                            <input class="write-us__input" type="text" name="name" placeholder="Имя Фамилия">
+                        </div>
+                        <div class="write-us__item">
+                            <h3 class="write-us__title">
+                                Ваш e-mail:
+                            </h3>
+                            <input class="write-us__input" type="text" name="mail" placeholder="email@example.com">
+                        </div>
+                    </div>
+                    <h3 class="write-us__title">
+                        Текст письма:
+                    </h3>
+                    <textarea class="write-us__textarea" type="mesage">В свободной форме</textarea>
+                </div>  <!-- /.write-us__inner -->
+
+                <div class="btn-send__wrapper">
+                    <a class="btn-send btn-red" href="#">
+                        Отправить
+                    </a>
+                </div>
+
+                <a class="btn-close" href="#">
+                    <span class="visually-hidden">
+                        Закрыть
+                    </span>
+                    <svg enable-background="new 0 0 21 21" height="21" viewBox="0 0 21 21" width="21" xmlns="http://www.w3.org/2000/svg"><path d="m13.273 10.5 7.422-7.422c.389-.389.389-1.025 0-1.414l-1.359-1.359c-.389-.389-1.025-.389-1.414 0l-7.422 7.422-7.422-7.422c-.389-.389-1.025-.389-1.414 0l-1.359 1.359c-.389.389-.389 1.025 0 1.414l7.422 7.422-7.421 7.422c-.389.389-.389 1.025 0 1.414l1.359 1.359c.389.389 1.025.389 1.414 0l7.422-7.422 7.422 7.422c.389.389 1.025.389 1.414 0l1.359-1.359c.389-.389.389-1.025 0-1.414z" fill="#ee3643"/></svg>
+                </a>
+            
+            </section>  <!-- /.write-us -->
+        </div>  <!-- /.container -->
         
-        </section>
 
         <section class="map">
             <h2 class="visually-hidden">
@@ -504,12 +544,15 @@
                     <div class="map-content">
                         <img src="img/map/map.jpg" alt="Офис на улице: Большая Конюшенная ул., 19" width="940" height="446">
                     </div>
-                    <button class="map__btn-close" type="button" aria-lable="Закрыть">
-                        X
-                    </button>
+                    <a class="btn-close" href="#">
+                        <span class="visually-hidden">
+                            Закрыть
+                        </span>
+                        <svg enable-background="new 0 0 21 21" height="21" viewBox="0 0 21 21" width="21" xmlns="http://www.w3.org/2000/svg"><path d="m13.273 10.5 7.422-7.422c.389-.389.389-1.025 0-1.414l-1.359-1.359c-.389-.389-1.025-.389-1.414 0l-7.422 7.422-7.422-7.422c-.389-.389-1.025-.389-1.414 0l-1.359 1.359c-.389.389-.389 1.025 0 1.414l7.422 7.422-7.421 7.422c-.389.389-.389 1.025 0 1.414l1.359 1.359c.389.389 1.025.389 1.414 0l7.422-7.422 7.422 7.422c.389.389 1.025.389 1.414 0l1.359-1.359c.389-.389.389-1.025 0-1.414z" fill="#ee3643"/></svg>
+                    </a>
                 </div>
              </div>
-        </section>
+        </section>  <!-- /.map -->
 
     </main>
 
