--- a/catalog.html
+++ b/catalog.html
@@ -24,11 +24,8 @@
                     </a>
                     <form class="header-top__search search-block" action="echo.htmlacademy.ru">
                         <label class="search-block__label">
-                            <span class="search-block__span">
-                                Поиск:
-                            </span>
-                            <input class="search-block__input" type="text">
-                            <svg class="search-block__svg" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
+                            <input class="search-block__input" type="serch" name="serch" placeholder="Поиск:">
+                            <svg class="search-block__svg" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
                         </label>
                     </form>
                     <a class="header-top__bookmark header-top__item" href="#">
@@ -179,6 +176,37 @@
                     </h2>
 
                     <form class="form-sort" method="get" action="https://echo.htmlacademy.ru">
+                        
+                        <fieldset>
+                            <legend>
+                                Цена:
+                            </legend>
+                            <div class="range-filter">
+                                <div class="range-controls">
+                                    <div class="scale">
+                                    <div class="bar">
+                                </div>
+                                </div>
+                                    <div class="toggle toggle-min"></div>
+                                    <div class="toggle toggle-max"></div>
+                                </div>
+                                <div class="price-controls">
+                                    <label class="min-price">
+                                        <span class="visually-hidden">
+                                            от
+                                        </span> 
+                                        <input name="min-price" type="text" value="0">
+                                    </label>
+                                    <label class="max-price">
+                                        <span class="visually-hidden">
+                                            до
+                                        </span> 
+                                        <input name="max-price" type="text" value="30000">
+                                    </label>
+                                </div>
+                            </div>
+                        </fieldset>
+                        
                         <fieldset>
                             <legend>
                                 Производители:
