--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="main-page">
@@ -27,7 +26,7 @@
                     </a>
                     <form class="header-top__search search-block" action="echo.htmlacademy.ru">
                         <label class="search-block__label">
-                            <input class="search-block__input" type="serch" name="serch" placeholder="Поиск:">
+                            <input class="search-block__input" type="search" name="search" placeholder="Поиск:">
                             <svg class="search-block__svg" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
                         </label>
                     </form>
@@ -549,7 +548,6 @@
 
         </section>  <!-- /.write-us -->
         
-
         <section class="map">
         
             <h2 class="visually-hidden">
@@ -691,7 +689,7 @@
                             <p class="list-info__text">
                                 Разработано -
                             </p>
-                            <a class="list-info__link" href="https://htmlacademy.ru" target="_blank">
+                            <a class="list-info__link" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
                                 htmlacademy.ru
                             </a>
                         </li>
