--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="main-page">
@@ -527,7 +527,7 @@
                     </div>
                     <label class="write-us__label">
                         <span>Текст письма:</span>  
-                        <textarea class="write-us__textarea">В свободной форме</textarea>
+                        <textarea class="write-us__textarea" placeholder="В свободной форме" value="В свободной форме"></textarea>
                     </label>
                 </div>  <!-- /.write-us__inner -->
 
