--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="x-rim-auto-match" content="none">
     <title>HTML Academy: Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
@@ -527,7 +529,7 @@
                     </div>
                     <label class="write-us__label">
                         <span>Текст письма:</span>  
-                        <textarea class="write-us__textarea" placeholder="В свободной форме" value="В свободной форме"></textarea>
+                        <textarea class="write-us__textarea" placeholder="В свободной форме"></textarea>
                     </label>
                 </div>  <!-- /.write-us__inner -->
 
