--- a/catalog.html
+++ b/catalog.html
@@ -98,7 +98,7 @@
                 <ul class="main-nav__list">
 
                     <li class="main-nav__item">
-                        <a class="main-nav__link" href="#">
+                        <a class="main-nav__link" href="index.html">
                             Главная
                         </a>
                     </li>
