--- a/catalog.html
+++ b/catalog.html
@@ -548,7 +548,7 @@
         </div>  <!-- /.container -->
     </section>  <!-- /.about-perforator -->
 
-    <section class="adding-goods">
+    <section class="adding-goods modal">
         <div class="adding-goods__content">
             <img class="adding-goods__img" src="img/catalog/icon-mark.svg" alt="Иконка выполнено" width="66" height="66">
             <h2 class="adding-goods__title">
@@ -559,10 +559,16 @@
             <a class="adding-goods_btn btn-red" href="#">
                 Оформить заказ
             </a>
-            <a class="adding-goods_btn" href="#">
+            <a class="adding-goods_btn btn-continue" href="#">
                 Продолжить покупки
             </a>
         </div>
+        <button class="btn-close" type="button">
+            <span class="visually-hidden">
+                Закрыть
+            </span>
+            <svg enable-background="new 0 0 21 21" height="21" viewBox="0 0 21 21" width="21" xmlns="http://www.w3.org/2000/svg"><path d="m13.273 10.5 7.422-7.422c.389-.389.389-1.025 0-1.414l-1.359-1.359c-.389-.389-1.025-.389-1.414 0l-7.422 7.422-7.422-7.422c-.389-.389-1.025-.389-1.414 0l-1.359 1.359c-.389.389-.389 1.025 0 1.414l7.422 7.422-7.421 7.422c-.389.389-.389 1.025 0 1.414l1.359 1.359c.389.389 1.025.389 1.414 0l7.422-7.422 7.422 7.422c.389.389 1.025.389 1.414 0l1.359-1.359c.389-.389.389-1.025 0-1.414z" fill="#ee3643"/></svg>
+        </button>
     </section>
 
     <footer class="footer">
@@ -680,7 +686,7 @@
                         </li>
                         <li class="list-info__item">
                             <p class="list-info__text">
-                                Разработано -
+                                Разработано —
                             </p>
                             <a class="list-info__link" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
                                 htmlacademy.ru
@@ -695,5 +701,8 @@
 
     </footer>
 
+
+
+    <script src="js/main.js"></script>
 </body>
 </html>
